--- a/app/views/user/categories/edit.html.erb
+++ b/app/views/user/categories/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 <center>
-<a href=<%= user_categories_path %> class="button secondary"></span>Wróć</a>
+<a href=<%= user_subject_categories_path(@subject) %> class="button secondary"></span>Wróć</a>
 </center>
