--- a/app/views/user/lists/edit.html.erb
+++ b/app/views/user/lists/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 <center>
-  <a href=<%= user_category_path(@list.category) %> class="button secondary"></span>Wróć</a>
+  <a href=<%= user_subject_category_path(@subject, @list.category) %> class="button secondary"></span>Wróć</a>
 </center>
