--- a/app/views/user/tasks/edit.html.erb
+++ b/app/views/user/tasks/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 <center>
-  <a href=<%= user_category_list_path(@category, @list) %> class="button secondary"></span>Wróć</a>
+  <a href=<%= user_subject_category_list_path(@subject, @category, @list) %> class="button secondary"></span>Wróć</a>
 </center>
