--- a/app/views/user/lists/_form.html.erb
+++ b/app/views/user/lists/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:user, @category, @list] do |f| %>
+<%= form_for [:user, @subject, @category, @list] do |f| %>
     <table>
       <tbody>
         <tr>
